--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,10 @@
       package="com.rhok.saaraa"
       android:versionCode="1"
       android:versionName="1.0">
+      
+    <uses-permission
+        android:name="android.permission.INTERNET" />
+      
     <uses-sdk android:minSdkVersion="4" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
