--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,6 +6,9 @@
       
     <uses-permission
         android:name="android.permission.INTERNET" />
+        
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        
       
     <uses-sdk android:minSdkVersion="4" />
 
