--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,8 +8,8 @@
         android:name="android.permission.INTERNET" />
         
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-        
-      
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    
     <uses-sdk android:minSdkVersion="4" />
 
     <application android:icon="@drawable/icon" android:label="@string/app_name">
