--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -27,7 +27,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-		<activity android:name=".CaptureActivity">
+		<activity android:name=".CaptureActivity" android:screenOrientation="landscape">
 		</activity>
     </application>
 </manifest>
